--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [tool.mypy]
 python_version = 3.11
-warn_unused_configs = true
-warn_return_any = true
-disallow_untyped_defs = true
-warn_unused_ignores = true
-warn_redundant_casts = true
-show_error_context = true
+strict = true
 pretty = true
+
+[[tool.mypy.overrides]]
+directories = "tests"  # Allow untyped tests.
 
 [tool.black]
 line-length = 88
@@ -27,7 +25,7 @@ select = [
     "PL"     # pylint
 ]
 
-ignore = ["D100"]
+ignore = ["D100", "D104"]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -71,13 +69,11 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
     "D101",  # Missing docstring in public class
     "D102",  # Missing docstring in public method
     "D103",  # Missing docstring in public function
-    "D104",  # Missing docstring in public package
 ]
 "conftest.py" = [
     "D101",  # Missing docstring in public class
     "D102",  # Missing docstring in public method
     "D103",  # Missing docstring in public function
-    "D104",  # Missing docstring in public package
 ]
 
 [tool.ruff.mccabe]
