--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,9 +9,9 @@ black==23.3.0
 cfgv==3.3.1
     # via pre-commit
 click==8.1.3
-    # via
-    #   -c requirements.txt
-    #   black
+    # via black
+conventional-pre-commit==2.4.0
+    # via -r requirements-dev.in
 distlib==0.3.6
     # via virtualenv
 filelock==3.12.2
@@ -45,9 +45,7 @@ pre-commit==3.3.3
 pytest==7.4.0
     # via -r requirements-dev.in
 pyyaml==6.0
-    # via
-    #   -c requirements.txt
-    #   pre-commit
+    # via pre-commit
 ruff==0.0.276
     # via -r requirements-dev.in
 typing-extensions==4.7.1
