--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,14 @@
 {
-    "python.formatting.provider": "black",
     "[python]": {
+        "editor.rulers": [88],
         "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+        "source.fixAll": true
+        },
+        "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-    },
-    "editor.rulers": [
-        88,
-    ],
     "python.analysis.typeCheckingMode": "basic",
     "python.analysis.extraPaths": [
         "./esd"
-    ],
+    ]
 }
