feat: create database tables and mappers
Prior to this change, the application was using CSV files for
persistence. The application will be moving to a relational database. As
a first step, database tables and mapper (between database table and
Python objects) are required.

This change:
1. Adds database tables for fitness profiles and workouts and
maps them against the associated Python classes FitnessProfile and
Workout using SQLAlchemy.
2. Temporarily moves database initiation to orm.py (DATABASE_URL and
session_factory). These will move to the api entry point once api code
is added to the application.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ mdurl==0.1.2
     # via markdown-it-py
 pygments==2.16.1
     # via rich
+python-dotenv==1.0.0
+    # via -r requirements.in
 rich==13.5.2
     # via -r requirements.in
 sqlalchemy==2.0.17
